--- a/css/master.css
+++ b/css/master.css
@@ -1,3 +1,146 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+ul[class],
+ol[class] {
+  padding: 0;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+ul[class],
+ol[class],
+li,
+figure,
+figcaption,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+
 body {
-  font-family: 'Roboto';
+  min-height: 100vh;
+  scroll-behavior: smooth;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+  font-family: 'Roboto', sans-serif;
+}
+
+ul[class],
+ol[class] {
+  list-style: none;
+}
+
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
+article>*+* {
+  margin-top: 1em;
+}
+
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+p {
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  background: #315DFA;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+  min-height: 57px;
+}
+
+.header-title {
+  padding: 14px 52px 0 24px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 94%;
+  text-transform: uppercase;
+  color: #AFDCE6;
+}
+
+.header-text {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 10px;
+  line-height: 94%;
+  color: #AFDCE6;
+  padding: 9px 0 10px 24px;
+}
+
+.container {
+  width: 295px;
+  margin: 0 auto;
+}
+
+h3 {
+  margin: 15px 0 0 0;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 129%;
+  color: #315DF9;
+}
+
+.main-text {
+  margin-top: 9px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 136%;
+  color: #343B4D;
+}
+
+.main-question-first-page {
+  background: #343B4D;
+}
+
+.main-question-first-page p {
+  padding: 16px 0;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 157%;
+  text-align: center;
+  color: #FFFFFF;
+}
+
+.main-answear-first-page {
+  background: #F3F4F8;
+  min-height: 68px;
+}
+
+.main-custom-input {
+  appearance: none;
+}
+
+.main-custom-input::before {
+  content: "";
+  border-radius: 50%;
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  background: #FFFFFF;
+  border: 1px solid #D6D6D6;
 }
